--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/google-signin": "^4.0.2",
     "@react-native-community/masked-view": "0.1.5",
+    "@react-native-firebase/app": "8.3.1",
+    "@react-native-firebase/messaging": "7.7.1",
     "@react-navigation/native": "^5.3.0",
     "accordion-collapse-react-native": "^0.2.10",
     "core-js": "^3.6.5",
