--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-native-restart": "0.0.17",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-sectioned-multi-select": "^0.7.7",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-simple-time-picker": "^0.2.0",
     "react-native-svg": "9.13.3",
