--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons-react-native": "^2.2.1",
     "@f-fjs/intl-relativetimeformat": "^4.5.10",
     "@paraboly/react-native-report-modal": "0.0.12",
+    "@react-native-community/async-storage": "1.12.0",
     "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/google-signin": "^4.0.2",
     "@react-native-community/masked-view": "0.1.5",
